talk-netobserv/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  name: ingress-mesh-arena
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 8080
        path: /
        pathType: Prefix
