talk-netobserv/03-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mesharena-ui
  namespace: mesh-arena
spec:
  podSelector:
    matchLabels:
      app: ui
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
