talk-netobserv/04-cilium-health-check.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cilium-health-checks"
  namespace: mesh-arena
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - remote-node
  egress:
    - toEntities:
        - remote-node
